--- a/less/home-page.less
+++ b/less/home-page.less
@@ -110,7 +110,8 @@
         @media @phone {
             display: flex;
             justify-content: center;
-            height: 180px;
+            height: auto;
+
 
             
             // img {
@@ -134,6 +135,8 @@
                @media @phone {
 
                 max-width: 80%;
+                width: 500px;
+                height: auto;
                 margin-top: 30px;
                 padding-bottom: 30px;  
 
